--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
     <script src="https://unpkg.com/react-router-dom@5.2.1/umd/react-router-dom.min.js" crossorigin></script>
     
     <!-- load our react component-->
+    <script src="./index.js" defer type="text/babel"></script>
     <script src="./context.js" defer type="text/babel"></script>
     <script src="./navbar.js" defer type="text/babel"></script>
     <script src="./createaccount.js" defer type="text/babel"></script>
@@ -34,7 +35,6 @@
     <script src="./balance.js" defer type="text/babel"></script>
     <script src="./alldata.js" defer type="text/babel"></script>
     <script src="./home.js" defer type="text/babel"></script>
-    <script src="./index.js" defer type="text/babel"></script>
     
     <link rel="stylesheet" href="styles.css">
 
@@ -53,6 +53,6 @@
 <br/>
 
 
-    <a href="https://www.freepik.com/photos/piggybank">Piggybank photo created by kstudio - www.freepik.com</a>
+<a href="https://www.freepik.com">designed by Drazen Zigic - Freepik.com</a>
 </footer>
 </html>
